MEDIA EXPAND: avoid layout shift

--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -122,13 +122,35 @@
     }
 
     &-media {
-        border-radius: to-rem($F5);
-        width: auto;
-        height: auto;
-        max-width: 100%;
-        position: relative;
-        display: block;
-        margin: 0 auto;
+        &-figure {
+            position: relative;
+            display: inline-block;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        &-placeholder {
+            display: block;
+            position: relative;
+            height: auto;
+            max-width: 100%;
+        }
+
+        &-item {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
+            object-fit: cover;
+
+            @include layout-1024() {
+                border-radius: to-rem($F7);
+            }
+        }
+
+
     }
 
     &-image,
